Speaker Cards - Responsiveness Fixes - Overlaps, Sizing & Widths

--- a/styles/global.css
+++ b/styles/global.css
@@ -1652,17 +1652,17 @@ select {
     max-width: 100%;
   }
 
-  .sm\:gap-2 {
-    gap: 0.5rem;
+  .sm\:gap-10 {
+    gap: 2.5rem;
   }
 
   .sm\:p-16 {
     padding: 4rem;
   }
 
-  .sm\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
+  .sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .sm\:text-center {
@@ -1763,6 +1763,10 @@ select {
 
   .md\:w-8\.5\/12 {
     width: 70.0%;
+  }
+
+  .md\:w-TabletCard {
+    width: 45%;
   }
 
   .md\:grid-cols-2 {
@@ -1925,6 +1929,10 @@ select {
 
   .ipad\:flex-row {
     flex-direction: row;
+  }
+
+  .ipad\:gap-2 {
+    gap: 0.5rem;
   }
 
   .ipad\:bg-hero-pattern {
